Minor settings refactor.

--- a/podcoder.ini
+++ b/podcoder.ini
@@ -1,15 +1,18 @@
 [artwork]
 coverart="/home/martin/Dropbox/UbuntuPodcast/uplogo_388.png"
-backdrop="/home/martin/Dropbox/UbuntuPodcast/hardy.png"
-poster="/home/martin/Dropbox/UbuntuPodcast/uplogo_854x480.png"
+backdrop="/home/martin/Dropbox/UbuntuPodcast/starburst_backdrop.png"
 font="/usr/share/fonts/truetype/ubuntu-font-family/Ubuntu-B.ttf"
 font_size=50
 font_color="#ffffff"
-line_color="#DD4814"
 fill_color="#000000"
+fill_y_start=350
+fill_y_stop=480
+line_color="#DD4814"
+header_width=960
+header_height=600
 
 [episode]
-audio_in="/home/martin/Audacity/S08E37/S08E37.wav"
+audio_in="/home/martin/S08E37/S08E37.wav"
 basename="ubuntupodcast"
 number="37"
 prefix="e"
@@ -24,7 +27,7 @@ bitrate=128k
 channels=2
 
 [ogg]
-bitrate=64k
+bitrate=96k
 channels=2
 
 [tags]
