Add mp3 and ogg codecs.

--- a/podcoder.ini
+++ b/podcoder.ini
@@ -25,10 +25,12 @@ prefix="s"
 [mp3]
 bitrate=128k
 channels=2
+codec=libmp3lame
 
 [ogg]
 bitrate=96k
 channels=2
+codec=libvorbis
 
 [tags]
 album="Season 8"
