Added YouTube configuration.

--- a/podcoder.ini
+++ b/podcoder.ini
@@ -44,3 +44,10 @@ performer="Alan Pope, Laura Cowen, Mark Johnson, Martin Wimpress"
 title="Episode 37 - Code Name: K.O.Z."
 tracknumber="228"
 website="http://www.ubuntupodcast.org"
+
+[youtube]
+category="Science & Technology"
+client_secrets="/home/martin/Dropbox/UbuntuPodcast/YouTube/ubuntupodcast_youtube_client_secret.json"
+credentials_file="/home/martin/Dropbox/UbuntuPodcast/YouTube/ubuntupodcast_youtube_credentials.json"
+tags="Ubuntu,Podcast"
+privacy="unlisted"
