Added skip options and generalised.

--- a/podcoder.ini
+++ b/podcoder.ini
@@ -1,54 +1,67 @@
 [artwork]
-coverart="/home/martin/Dropbox/UbuntuPodcast/uplogo_388.png"
-backdrop="/home/martin/Dropbox/UbuntuPodcast/starburst_backdrop.png"
+coverart="/path/to/yourpodcast_coverart.png"
+backdrop="/path/to/yourpodcast_backdrop_used_for_creating_videos.png"
 font="/usr/share/fonts/truetype/ubuntu-font-family/Ubuntu-B.ttf"
 font_size=50
 font_color="#ffffff"
 fill_color="#000000"
 fill_y_start=350
 fill_y_stop=480
-line_color="#DD4814"
+line_color="#ffffff"
 header_width=960
 header_height=600
 
 [episode]
-audio_in="/home/martin/S08E37/S08E37.wav"
-basename="ubuntupodcast"
-number="37"
+audio_in="/path/to/podcasts/season/01"
+basename="yourpodcast"
+number="00"
 prefix="e"
 seperator="_"
 
 [season]
-number=08
+number=01
 prefix="s"
 
 [mp3]
+skip=False
 bitrate=128k
 channels=2
 codec=libmp3lame
 
 [ogg]
-bitrate=96k
+skip=False
+bitrate=64k
 channels=2
 codec=libvorbis
 
 [tags]
-album="Season 8"
-artist="Ubuntu Podcast"
-comments="We discuss what's been happening in the news and the Ubuntu community"
-copyright="Ubuntu Podcast (c) 2015 [CC BY-SA 3.0]"
+album="Season 1"
+artist="Your Podcast"
+comments="A comment that will be posted in every YouTube upload."
+copyright="Your Podcast (c) 2015 [CC BY-SA 3.0]"
 date="2015"
 genre="Podcast"
 language="eng"
-performer="Alan Pope, Laura Cowen, Mark Johnson, Martin Wimpress"
-title="Episode 37 - Code Name: K.O.Z."
-tracknumber="228"
-website="http://www.ubuntupodcast.org"
+performer=""
+title=""
+tracknumber="0"
+website="http://www.yourpodcast.org/"
 
 [youtube]
+skip=False
 category="Science & Technology"
-client_secrets="/home/martin/Dropbox/UbuntuPodcast/YouTube/ubuntupodcast_youtube_client_secret.json"
-credentials_file="/home/martin/Dropbox/UbuntuPodcast/YouTube/ubuntupodcast_youtube_credentials.json"
-tags="Ubuntu,Podcast"
+client_secrets="/path/to/yourpodcast_youtube_client_secret.json"
+credentials_file="/path/to/yourpodcast_youtube_credentials.json"
+tags="Your,Podcast"
 privacy="unlisted"
 publish_at=None
+
+[sftp]
+skip=False
+host="www.yourpodcast.org"
+port=22
+username="yourusername"
+password="yourpassword"
+private_key=None
+private_key_pass=None
+remote_directory="/var/www/yourpodcast/s01/e01/"
