Added skip options and sftp.

--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -23,11 +23,13 @@ number=01
 prefix="s"
 
 [mp3]
+skip=True
 bitrate=128k
 channels=2
 codec=libmp3lame
 
 [ogg]
+skip=True
 bitrate=64k
 channels=2
 codec=libvorbis
@@ -46,9 +48,20 @@ tracknumber="0"
 website="http://www.yourpodcast.org/"
 
 [youtube]
+skip=False
 category="Science & Technology"
 client_secrets="/path/to/yourpodcast_youtube_client_secret.json"
 credentials_file="/path/to/yourpodcast_youtube_credentials.json"
 tags="Your,Podcast"
 privacy="unlisted"
 publish_at=None
+
+[sftp]
+skip=True
+host="www.yourpodcast.org"
+port=22
+username="yourusername"
+password="yourpassword"
+private_key=None
+private_key_pass=None
+remote_directory="/var/www/yourpodcast/s01/e01/"
