--- a/podcast.ini
+++ b/podcast.ini
@@ -10,6 +10,8 @@ fill_y_stop=480
 line_color="#ffffff"
 header_width=960
 header_height=600
+poster_width=854
+poster_height=480
 
 [episode]
 audio_in="/path/to/podcasts/season/01"
