Clean up .ini files.

--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -1,7 +1,7 @@
 [artwork]
-coverart="/path/to/yourpodcast_coverart.png"
-backdrop="/path/to/yourpodcast_backdrop_used_for_creating_videos.png"
-font="/usr/share/fonts/truetype/ubuntu-font-family/Ubuntu-B.ttf"
+coverart=/path/to/yourpodcast_coverart.png
+backdrop=/path/to/yourpodcast_backdrop_used_for_creating_videos.png
+font=/usr/share/fonts/truetype/ubuntu-font-family/Ubuntu-B.ttf
 font_size=50
 font_color="#ffffff"
 fill_color="#000000"
@@ -10,58 +10,58 @@ fill_y_stop=480
 line_color="#ffffff"
 header_width=960
 header_height=600
+poster_width=854
+poster_height=480
 
 [episode]
-audio_in="/path/to/podcasts/season/01"
-basename="yourpodcast"
-number="00"
-prefix="e"
-seperator="_"
+audio_in=/path/to/podcasts/season/01
+basename=yourpodcast
+number=00
+prefix=e
+seperator=_
 
 [season]
 number=01
-prefix="s"
+prefix=s
 
 [mp3]
 skip=True
 bitrate=128k
 channels=2
-codec=libmp3lame
 
 [ogg]
 skip=True
 bitrate=64k
 channels=2
-codec=libvorbis
 
 [tags]
-album="Season 1"
-artist="Your Podcast"
-comments="A comment that will be posted in every YouTube upload."
-copyright="Your Podcast (c) 2015 [CC BY-SA 3.0]"
-date="2015"
-genre="Podcast"
-language="eng"
-performer=""
-title=""
-tracknumber="0"
-website="http://www.yourpodcast.org/"
+album=Season 1
+artist=Your Podcast
+comments=A comment that will be posted in every YouTube upload.
+copyright=Your Podcast (c) 2015 [CC BY-SA 3.0]
+date=2015
+genre=Podcast
+language=eng
+performer=Mr. Smith, Mr. Jones
+title=My first podcast
+tracknumber=0
+website=http://www.yourpodcast.org/
 
 [youtube]
 skip=False
-category="Science & Technology"
-client_secrets="/path/to/yourpodcast_youtube_client_secret.json"
-credentials_file="/path/to/yourpodcast_youtube_credentials.json"
-tags="Your,Podcast"
-privacy="unlisted"
+category=Science & Technology
+client_secrets=/path/to/yourpodcast_youtube_client_secret.json
+credentials_file=/path/to/yourpodcast_youtube_credentials.json
+tags=Your,Podcast
+privacy=unlisted
 publish_at=None
 
 [sftp]
 skip=True
-host="www.yourpodcast.org"
+host=www.yourpodcast.org
 port=22
-username="yourusername"
-password="yourpassword"
-private_key=None
-private_key_pass=None
-remote_directory="/var/www/yourpodcast/s01/e01/"
+username=yourusername
+password=yourpassword
+private_key=
+private_key_pass=
+remote_directory=/var/www/yourpodcast/s01/e01/
