Correct some quoting.

--- a/podcast.ini
+++ b/podcast.ini
@@ -42,7 +42,7 @@ copyright=Your Podcast (c) 2015 [CC BY-SA 3.0]
 date=2015
 genre=Podcast
 language=eng
-performer=Mr. Smith, Mr. Jones
+performer="Mr. Smith, Mr. Jones"
 title=My first podcast
 tracknumber=0
 website=http://www.yourpodcast.org/
@@ -52,7 +52,7 @@ skip=False
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
-tags=Your,Podcast
+tags="Your,Podcast"
 privacy=unlisted
 publish_at=None
 
