Add Wordpress config.

--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -47,11 +47,34 @@ title=My first podcast
 tracknumber=0
 website=http://www.yourpodcast.org/
 
+[wordpress]
+skip=True
+xmlrpc=https://yourpodcast.wordpress.com/xmlrpc.php
+username=yourusername
+password="yourpassword"
+status=publish
+title=My first podcast
+content="""
+Your show notes got here.
+
+On many lines, best to use [Markdown](https://en.support.wordpress.com/markdown/).
+"""
+post_format=audio
+post_status=draft
+category=Season 1
+tags="Your,Podcast"
+attach_header=False
+
 [youtube]
 skip=False
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
+description="""
+Your show notes got here.
+
+On many lines.
+"""
 tags="Your,Podcast"
 privacy=unlisted
 publish_at=None
