Update config files.

--- a/podcast.ini
+++ b/podcast.ini
@@ -54,14 +54,15 @@ username=yourusername
 password="yourpassword"
 status=publish
 title=My first podcast
+category=Season 1
 content="""
 Your show notes got here.
 
 On many lines, best to use [Markdown](https://en.support.wordpress.com/markdown/).
 """
+podcast_plugin=Powerpress
 post_format=audio
 post_status=draft
-category=Season 1
 tags="Your,Podcast"
 attach_header=False
 
