--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -52,16 +52,16 @@ skip=True
 xmlrpc=https://yourpodcast.wordpress.com/xmlrpc.php
 username=yourusername
 password="yourpassword"
-status=publish
 title=My first podcast
+category=Season 1
 content="""
 Your show notes got here.
 
 On many lines, best to use [Markdown](https://en.support.wordpress.com/markdown/).
 """
+podcast_plugin=Powerpress
 post_format=audio
 post_status=draft
-category=Season 1
 tags="Your,Podcast"
 attach_header=False
 
