Add support for setting comment status.

--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -54,6 +54,7 @@ username=yourusername
 password="yourpassword"
 title=My first podcast
 category=Season 1
+comment_status=open
 content="""
 Your show notes got here.
 
