--- a/podcast.ini
+++ b/podcast.ini
@@ -55,6 +55,7 @@ password="yourpassword"
 status=publish
 title=My first podcast
 category=Season 1
+comment_status=open
 content="""
 Your show notes got here.
 
