--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -24,6 +24,7 @@ apps:
 parts:
   podpublish:
     plugin: python3
+    requirements: requirements.txt
     source: https://bitbucket.org/flexiondotorg/podpublish.git
     source-type: git
     build-packages:
