Revert "Update requirements from pip freeze."
This reverts commit dd1c40e1c28100b19220daa01fa9365150164959.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,13 @@
-cffi==1.9.1
-configobj==5.0.6
-cryptography==1.5.3
-ffmpy==0.2.2
-google-api-python-client==1.5.5
-html2text==2016.9.19
-httplib2==0.9.2
-idna==2.1
-Markdown==2.6.7
-mutagen==1.35.1
-oauth2client==4.0.0
-paramiko==2.0.2
-Pillow==3.4.2
-PodPublish==0.0.1
-progressbar2==3.11.0
-pyasn1==0.1.9
-pyasn1-modules==0.0.8
-pycparser==2.17
-pydub==0.16.6
-pysftp==0.2.9
-python-resize-image==1.1.3
-python-utils==2.0.0
-python-wordpress-xmlrpc==2.3
-rsa==3.4.2
-six==1.10.0
-uritemplate==3.0.0
+configobj
+ffmpy==0.1.0
+google-api-python-client
+html2text
+markdown
+mutagen
+oauth2client
+pillow
+progressbar2
+pydub
+pysftp
+python-resize-image
+python-wordpress-xmlrpc
