--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: podpublish
-version: 20160610+git5ddfa04-1
+version: 0.0.1-1
 summary: A tool for encoding and publishing podcast content and assets
 description: |
  A tool for encoding and publishing podcast content and assets. Inspired by
@@ -9,6 +9,7 @@ description: |
 confinement: devmode
 grade: devel
 
+# Export LC_ALL to work-around (LP: #1576411)
 apps:
   encode-podcast:
     command: env LC_ALL=C.UTF-8 ${SNAP}/usr/bin/python3 $SNAP/bin/encode-podcast
