--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: podpublish
-version: 0.0.1-1
+version: 0.0.2
 summary: A tool for encoding and publishing podcast content and assets
 description: |
  A tool for encoding and publishing podcast content and assets. Inspired by
@@ -30,8 +30,10 @@ parts:
     requirements: requirements.txt
     source: https://bitbucket.org/flexiondotorg/podpublish.git
     source-type: git
+    after:
+      - ffmpeg
     build-packages:
-      - build-essential
+      - gcc
       - liblcms2-dev
       - libffi-dev
       - libfreetype6-dev
@@ -47,11 +49,29 @@ parts:
       - libfreetype6
       - libjpeg8
       - libopenjp2-7
-      - libpulse0
       - libssl1.0.0
       - libtiff5
       - zlib1g
     snap:
+      - -bin/*.py
+      - -bin/html2text
+      - -bin/markdown_py
+      - -bin/mid3*
+      - -bin/moggsplit
+      - -bin/mutagen*
+      - -bin/pyrsa*
+      - -lib/python*/site-packages/pip
+      - -lib/python*/site-packages/setuptools*
+      - -lib/python*/site-packages/tests
+      - -lib/python*/site-packages/wheel*
+      - -usr/bin/2to3*
+      - -usr/bin/dh_*
+      - -usr/bin/pdb3*
+      - -usr/bin/pydoc3*
+      - -usr/bin/pygettext3*
+      - -usr/lib/gcc
+      - -usr/lib/valgrind
+      - -usr/sbin
       - -usr/share/applications
       - -usr/share/bug
       - -usr/share/debhelper
@@ -60,43 +80,44 @@ parts:
       - -usr/share/doc-base
       - -usr/share/fonts
       - -usr/share/include
+      - -usr/share/lintian/overrides
       - -usr/share/man
+      - -usr/share/perl5/Debian
+      - -usr/share/pixmaps
       - -usr/share/X11/XErrorDB
       - -share/man
 
+# Cut down ffmpeg specific to podpublish needs
   ffmpeg:
     source: http://ffmpeg.org/releases/ffmpeg-3.2.tar.bz2
     plugin: autotools
-    configflags: [--enable-gpl, --enable-libass, --enable-libfreetype, --enable-libmp3lame, --enable-libopus, --enable-libtheora, --enable-libvorbis, --enable-libvpx, --enable-libx264, --enable-libx265, --enable-nonfree, --enable-shared, --disable-static, --disable-doc, --disable-ffserver, --disable-ffplay]
+    configflags:
+      - --enable-gpl
+      - --enable-nonfree
+      - --enable-libfreetype
+      - --enable-libmp3lame
+      - --enable-libvorbis
+      - --enable-libx264
+      - --disable-doc
+      - --disable-ffplay
+      - --disable-ffprobe
+      - --disable-ffserver
+      - --disable-libass
+      - --disable-libopus
+      - --disable-libtheora
+      - --disable-libvpx
+      - --disable-libx265
     build-packages:
-      - build-essential
       - cmake
-      - libtool
-      - pkg-config
-      - libass-dev
+      - gcc
       - libfreetype6-dev
       - libmp3lame-dev
-      - libopus-dev
-      - libsdl1.2-dev
-      - libtheora-dev
-      - libva-dev
-      - libvdpau-dev
       - libvorbis-dev
-      - libvpx-dev
       - libx264-dev
-      - libx265-dev
-      - libxcb1-dev
-      - libxcb-shm0-dev
-      - libxcb-xfixes0-dev
-      - texinfo
+      - pkg-config
       - yasm
       - zlib1g-dev
     snap:
-      - -usr/local/include
-      - -usr/local/lib/pkgconfig
-      - -usr/local/share/doc/ffmpeg
-      - -usr/local/share/ffmpeg/examples
-      - -usr/local/share/include
-      - -usr/local/share/man
+      - usr/bin/ffmpeg
     organize:
       usr/local/bin: usr/bin
