Exclude snap build assets.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,3 +16,6 @@ exclude nosetests.xml
 exclude podcast.ini
 exclude season_to_youtube.ini
 exclude snapcraft.yaml
+exclude parts
+exclude prime
+exclude stage
