--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -52,44 +52,81 @@ parts:
       - libssl1.0.0
       - libtiff5
       - zlib1g
+    # The cruft_ filesets define files/directories that can be safely removed
+    # from podpublish to reduce the size of the snap. They have been grouped
+    # to assist others seeking to shrink snaps of Python apps.
+    filesets:
+      cruft_binaries:
+        - -bin/*.py
+        - -bin/html2text
+        - -bin/markdown_py
+        - -bin/mid3*
+        - -bin/moggsplit
+        - -bin/mutagen*
+        - -bin/pyrsa*
+        - -usr/bin/pydoc3*
+        - -usr/bin/pygettext3*
+        - -usr/sbin
+      cruft_compilers_and_debuggers:
+        - -usr/bin/pdb3*
+        - -usr/lib/gcc
+        - -usr/lib/valgrind
+        - -usr/share/bug
+      cruft_debhelper:
+        - -usr/bin/dh_*
+        - -usr/share/debhelper
+        - -usr/share/dh-python
+        - -usr/share/perl5/Debian
+      cruft_docs:
+        - -usr/share/doc
+        - -usr/share/doc-base
+      cruft_fonts:
+        - -usr/share/fonts
+      cruft_headers:
+        - -usr/share/include
+      cruft_lintian:
+        - -usr/share/lintian/overrides
+      cruft_man_pages:
+        - -usr/share/man
+        - -share/man
+      cruft_meta:
+        - -usr/share/applications
+        - -usr/share/pixmaps
+      cruft_python_2to3:
+        - -usr/bin/2to3*
+        - -usr/lib/python*/lib2to3
+      cruft_python_idle:
+        - -usr/lib/python*/idlelib
+        - -usr/lib/python*/tkinter
+      cruft_python_pip:
+        - -lib/python*/site-packages/pip
+      cruft_python_setuptools:
+        - -lib/python*/site-packages/setuptools*
+      cruft_python_tests:
+        - -lib/python*/site-packages/tests
+      cruft_python_venv:
+        - -usr/lib/python*/venv
+      cruft_python_wheel:
+        - -lib/python*/site-packages/wheel*
+      cruft_x11:
+        - -usr/share/X11/XErrorDB
     snap:
-      - -bin/*.py
-      - -bin/html2text
-      - -bin/markdown_py
-      - -bin/mid3*
-      - -bin/moggsplit
-      - -bin/mutagen*
-      - -bin/pyrsa*
-      - -lib/python*/site-packages/pip
-      - -lib/python*/site-packages/setuptools*
-      - -lib/python*/site-packages/tests
-      - -lib/python*/site-packages/wheel*
-      - -usr/bin/2to3*
-      - -usr/bin/dh_*
-      - -usr/bin/pdb3*
-      - -usr/bin/pydoc3*
-      - -usr/bin/pygettext3*
-      - -usr/lib/gcc
-      - -usr/lib/python*/idlelib
-      - -usr/lib/python*/lib2to3
-      - -usr/lib/python*/tkinter
-      - -usr/lib/python*/venv
-      - -usr/lib/valgrind
-      - -usr/sbin
-      - -usr/share/applications
-      - -usr/share/bug
-      - -usr/share/debhelper
-      - -usr/share/dh-python
-      - -usr/share/doc
-      - -usr/share/doc-base
-      - -usr/share/fonts
-      - -usr/share/include
-      - -usr/share/lintian/overrides
-      - -usr/share/man
-      - -usr/share/perl5/Debian
-      - -usr/share/pixmaps
-      - -usr/share/X11/XErrorDB
-      - -share/man
+      - $cruft_binaries
+      - $cruft_compilers_and_debuggers
+      - $cruft_debhelper
+      - $cruft_docs
+      - $cruft_fonts
+      - $cruft_headers
+      - $cruft_lintian
+      - $cruft_man_pages
+      - $cruft_python_2to3
+      - $cruft_python_idle
+      - $cruft_python_pip
+      - $cruft_python_setuptools
+      - $cruft_python_tests
+      - $cruft_python_venv
+      - $cruft_python_wheel
+      - $cruft_x11
 
 # Cut down ffmpeg specific to podpublish needs
   ffmpeg:
@@ -113,7 +150,6 @@ parts:
       - --disable-libvpx
       - --disable-libx265
     build-packages:
-      - cmake
       - gcc
       - libfreetype6-dev
       - libmp3lame-dev
