--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
-configobj
-ffmpy
-google-api-python-client
-html2text
-markdown
-mutagen
-oauth2client
-pillow
-progressbar2
-pydub
-pysftp
-python-resize-image
-python-wordpress-xmlrpc
+cffi==1.8.3
+configobj==5.0.6
+cryptography==1.5.2
+ffmpy==0.1.0
+google-api-python-client==1.5.3
+html2text==2016.9.19
+httplib2==0.9.2
+idna==2.1
+Markdown==2.6.7
+mutagen==1.34.1
+oauth2client==3.0.0
+paramiko==2.0.2
+Pillow==3.3.1
+PodPublish==0.0.0
+progressbar2==3.10.1
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+pycparser==2.14
+pydub==0.16.5
+pysftp==0.2.9
+python-resize-image==1.1.3
+python-utils==2.0.0
+python-wordpress-xmlrpc==2.3
+rsa==3.4.2
+simplejson==3.8.2
+six==1.10.0
+uritemplate==0.6
