--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,12 @@ pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pycparser==2.14
 pydub==0.16.5
+
+# pin pysftp to 0.2.8 to work around #109
+# https://bitbucket.org/dundeemt/pysftp/issues/109/
+# https://bitbucket.org/dundeemt/pysftp/issues/95/host-key-as-connection-option
 pysftp==0.2.8
+
 python-resize-image==1.1.3
 python-utils==2.0.0
 python-wordpress-xmlrpc==2.3
