Add option to animate videos.

--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -68,6 +68,7 @@ attach_header=False
 
 [youtube]
 skip=False
+animated=True
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
