Add [links] to example configuration.

--- a/podcast.ini
+++ b/podcast.ini
@@ -47,6 +47,13 @@ title=My first podcast
 tracknumber=0
 website=http://www.yourpodcast.org/
 
+[links]
+telegram=http://www.yourpodcast.org/telegram
+twitter=https://twitter.com/yourpodcast
+facebook=https://www.facebook.com/yourpodcast
+googleplus=https://plus.google.com/+yourpodcast
+reddit=https://www.reddit.com/r/YourPodcast/
+
 [wordpress]
 skip=False
 xmlrpc=https://yourpodcast.wordpress.com/xmlrpc.php
@@ -69,7 +76,7 @@ attach_header=False
 
 [youtube]
 skip=False
-animated=True
+animated=False
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
