--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: podpublish
-version: 0.0.3
+version: 'git'
 summary: A tool for encoding and publishing podcast content and assets
 description: |
  A tool for encoding and publishing podcast content and assets. Inspired by
@@ -8,21 +8,6 @@ description: |
 
 confinement: strict
 grade: stable
-
-# Export LC_ALL to work-around (LP: #1576411)
-apps:
-  encode-podcast:
-    command: env LC_ALL=C.UTF-8 ${SNAP}/usr/bin/python3 $SNAP/bin/encode-podcast
-    plugs: [home]
-  publish-podcast:
-    command: env LC_ALL=C.UTF-8 ${SNAP}/usr/bin/python3 $SNAP/bin/publish-podcast
-    plugs: [home, network]
-  season-to-youtube:
-    command: env LC_ALL=C.UTF-8 ${SNAP}/usr/bin/python3 $SNAP/bin/season-to-youtube
-    plugs: [home]
-  youtube-upload:
-    command: env LC_ALL=C.UTF-8 ${SNAP}/usr/bin/python3 $SNAP/bin/youtube-upload
-    plugs: [home, network]
 
 parts:
   podpublish:
@@ -99,8 +84,6 @@ parts:
         - -usr/lib/python*/tkinter
       cruft_python_pip:
         - -lib/python*/site-packages/pip
-      cruft_python_setuptools:
-        - -lib/python*/site-packages/setuptools*
       cruft_python_tests:
         - -lib/python*/site-packages/tests
       cruft_python_venv:
@@ -109,7 +92,7 @@ parts:
         - -lib/python*/site-packages/wheel*
       cruft_x11:
         - -usr/share/X11/XErrorDB
-    snap:
+    prime:
       - $cruft_binaries
       - $cruft_compilers_and_debuggers
       - $cruft_debhelper
@@ -121,7 +104,6 @@ parts:
       - $cruft_python_2to3
       - $cruft_python_idle
       - $cruft_python_pip
-      - $cruft_python_setuptools
       - $cruft_python_tests
       - $cruft_python_venv
       - $cruft_python_wheel
@@ -129,7 +111,7 @@ parts:
 
 # Cut down ffmpeg specific to podpublish needs
   ffmpeg:
-    source: http://ffmpeg.org/releases/ffmpeg-3.2.tar.bz2
+    source: http://ffmpeg.org/releases/ffmpeg-3.4.1.tar.bz2
     plugin: autotools
     configflags:
       - --enable-gpl
@@ -159,5 +141,28 @@ parts:
       - zlib1g-dev
     organize:
       usr/local/bin: usr/bin
-    snap:
+    prime:
       - usr/bin/ffmpeg
+
+# Export LC_ALL to work-around http://pad.lv/1576411
+apps:
+  encode-podcast:
+    command: usr/bin/python3 $SNAP/bin/encode-podcast
+    environment:
+      LC_ALL: C.UTF-8
+    plugs: [home]
+  publish-podcast:
+    command: usr/bin/python3 $SNAP/bin/publish-podcast
+    environment:
+      LC_ALL: C.UTF-8
+    plugs: [home, network]
+  season-to-youtube:
+    command: usr/bin/python3 $SNAP/bin/season-to-youtube
+    environment:
+      LC_ALL: C.UTF-8
+    plugs: [home]
+  youtube-upload:
+    command: usr/bin/python3 $SNAP/bin/youtube-upload
+    environment:
+      LC_ALL: C.UTF-8
+    plugs: [home, network]
