--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -113,10 +113,80 @@ parts:
       - $cruft_python_wheel
       - $cruft_x11
 
+  nasm:
+    plugin: autotools
+    source: http://www.nasm.us/pub/nasm/releasebuilds/2.13.02/nasm-2.13.02.tar.xz
+    configflags:
+      - --prefix=/usr
+
+  x264:
+    plugin: autotools
+    source: http://ftp.videolan.org/pub/videolan/x264/snapshots/x264-snapshot-20180114-2245-stable.tar.bz2
+    configflags:
+      - --prefix=/usr
+      - --disable-cli
+      - --enable-pic
+      - --enable-shared
+      - --enable-strip
+    after:
+      - nasm
+    prime:
+      - usr/lib
+
+  fdk-aac:
+    plugin: autotools
+    source: https://github.com/mstorsjo/fdk-aac/archive/v0.1.5.tar.gz
+    build-packages:
+      - g++
+    configflags:
+      - --prefix=/usr
+      - --disable-static
+    prime:
+      - usr/lib
+
+  lame:
+    plugin: autotools
+    configflags:
+      - --prefix=/usr
+      - --disable-static
+      - --enable-nasm
+    source: http://downloads.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
+    prime:
+      - usr/lib
+
+  libogg:
+    plugin: autotools
+    source: http://downloads.xiph.org/releases/ogg/libogg-1.3.3.tar.xz
+    configflags:
+      - --prefix=/usr
+      - --disable-static
+    prime:
+      - -usr/include
+      - -usr/lib/pkgconfig
+      - -usr/share
+
+  libvorbis:
+    plugin: autotools
+    source: http://downloads.xiph.org/releases/vorbis/libvorbis-1.3.5.tar.xz
+    configflags:
+      - --prefix=/usr
+      - --disable-static
+    prime:
+      - -usr/include
+      - -usr/lib/pkgconfig
+      - -usr/share
+    after:
+      - libogg
+
 # Cut down ffmpeg specific to podpublish needs
   ffmpeg:
     source: http://ffmpeg.org/releases/ffmpeg-3.4.1.tar.bz2
     plugin: autotools
+    after:
+     - x264
+     - fdk-aac
+     - libvorbis
+     - lame
     configflags:
       - --enable-gpl
       - --enable-nonfree
@@ -137,9 +207,6 @@ parts:
     build-packages:
       - gcc
       - libfreetype6-dev
-      - libmp3lame-dev
-      - libvorbis-dev
-      - libx264-dev
       - pkg-config
       - yasm
       - zlib1g-dev
