--- a/podcast.ini
+++ b/podcast.ini
@@ -77,6 +77,7 @@ attach_header=False
 [youtube]
 skip=False
 animated=False
+codec=h264_nvenc
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
