--- a/podcast.ini
+++ b/podcast.ini
@@ -46,6 +46,8 @@ performer="Mr. Smith, Mr. Jones"
 title=My first podcast
 tracknumber=0
 website=http://www.yourpodcast.org/
+# either 'episodic' or 'serial'
+podcast_type=episodic
 
 [links]
 telegram=http://www.yourpodcast.org/telegram
@@ -57,9 +59,11 @@ reddit=https://www.reddit.com/r/YourPodcast/
 [wordpress]
 skip=False
 xmlrpc=https://yourpodcast.wordpress.com/xmlrpc.php
+# uploaded files path: {0} is season number, {1} is episode number, {2} is mp3 filename
+# example for Ubuntu Podcast: "http://static.ubuntupodcast.org/ubuntupodcast/s{0}/e{1}/{2}"
+uploads_url="https://yourpodcast.wordpress.com/wp-content/uploads/yourpodcast/season{0}/episode{1}/{2}"
 username=yourusername
 password="yourpassword"
-status=publish
 title=My first podcast
 category=Season 1
 comment_status=open
