--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pysftp==0.2.8
 python-resize-image==1.1.3
 python-utils==2.0.0
 python-wordpress-xmlrpc==2.3
+phpserialize==1.3
 rsa==3.4.2
 simplejson==3.8.2
 six==1.10.0
