Replace Google+ links with Mastodon links. Closes #7

--- a/podcast.ini
+++ b/podcast.ini
@@ -53,7 +53,7 @@ podcast_type=episodic
 telegram=http://www.yourpodcast.org/telegram
 twitter=https://twitter.com/yourpodcast
 facebook=https://www.facebook.com/yourpodcast
-googleplus=https://plus.google.com/+yourpodcast
+mastodon=https://octodon.social/@yourpodcast
 reddit=https://www.reddit.com/r/YourPodcast/
 
 [wordpress]
