--- a/season_to_youtube.ini
+++ b/season_to_youtube.ini
@@ -51,7 +51,7 @@ website=http://www.yourpodcast.org/
 telegram=http://www.yourpodcast.org/telegram
 twitter=https://twitter.com/yourpodcast
 facebook=https://www.facebook.com/yourpodcast
-googleplus=https://plus.google.com/+yourpodcast
+mastodon=https://octodon.social/@yourpodcast
 reddit=https://www.reddit.com/r/YourPodcast/
 
 [wordpress]
