Add support for YouTube hashtags

--- a/podcast.ini
+++ b/podcast.ini
@@ -91,6 +91,7 @@ Your show notes got here.
 On many lines.
 """
 tags="Your,Podcast"
+hash_tags="#only #three #hashtags"
 privacy=unlisted
 publish_at=None
 
