Don't derive YouTube titles, actually define them

--- a/podcast.ini
+++ b/podcast.ini
@@ -85,6 +85,7 @@ codec=h264_nvenc
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
+title=My first podcast
 description="""
 Your show notes got here.
 
