Add YouTube bitrate and optimise video encoding

--- a/podcast.ini
+++ b/podcast.ini
@@ -81,7 +81,8 @@ attach_header=False
 [youtube]
 skip=False
 animated=False
-codec=h264_nvenc
+bitrate=768k
+codec=libx264
 category=Science & Technology
 client_secrets=/path/to/yourpodcast_youtube_client_secret.json
 credentials_file=/path/to/yourpodcast_youtube_credentials.json
